<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">


<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appointment"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/meet_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:hint="@string/user_name"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
        />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="number"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:hint="@string/id_number"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
        />
    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:hint="@string/address"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
        />
    <EditText
        android:id="@+id/compony_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:hint="@string/componyname"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
        />
    <EditText
        android:id="@+id/doctor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:inputType="text"
        android:drawablePadding="10dp"
        android:hint="@string/doctorname"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
        />

    <Button
        android:id="@+id/meeting_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:hint="@string/date"
        android:padding="15dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700" />
    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:inputType="number"
        android:drawablePadding="10dp"
        android:hint="phone number"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
        />

    <TextView
        android:id="@+id/service_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="15dp"
        android:text="@string/appointment"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="20dp"
        android:textStyle="bold" />
    <RadioGroup
        android:layout_width="match_parent"
        android:id="@+id/radioGroup"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:background="@drawable/shapeemail"
         android:layout_margin="10dp"
        android:checkedButton="@+id/in_lap"
        >

        <RadioButton
            android:id="@+id/in_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/button_color"
            android:layout_marginLeft="16dp"
            android:textColor="@color/teal_700"
            android:text="@string/home_vist"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/in_lap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:buttonTint="@color/button_color"
            android:textColor="@color/teal_700"
            android:layout_weight="1"
            android:text="@string/inlap" />
    </RadioGroup>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:background="@drawable/shapeemail"
        android:prompt="@string/spinner1_tests"

    />
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:background="@drawable/shapeemail"
        android:prompt="@string/spinner2_testbackages"

        />



    <Button
        android:id="@+id/regest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/background"
        android:shadowColor="@color/background"
        android:padding="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shapelogin"/>
</TableLayout>



</ScrollView>