<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_res"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/res"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/email_show_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawableLeft="@drawable/ic_baseline_email"
        android:drawablePadding="10dp"
        android:hint="@string/Email"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
        />
    <EditText
        android:id="@+id/pass_show_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawableLeft="@drawable/ic_baseline_https_24"
        android:drawablePadding="10dp"
        android:hint="@string/Password"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
        />
    <EditText
        android:id="@+id/id_number_show_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawableLeft="@drawable/ic_baseline_person"
        android:drawablePadding="10dp"
        android:hint="@string/id_number"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shapelogin"
        android:id="@+id/login_show_result"
        android:text="@string/show_my_result"
        android:textColor="@color/white"
        android:layout_margin="8dp"/>
</LinearLayout>