<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

<!--    <ImageView-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/icon"-->
<!--        />-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawableLeft="@drawable/ic_baseline_person"
        android:drawablePadding="10dp"
        android:hint="@string/user_name"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
       />

    <EditText
        android:id="@+id/register_pass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawableLeft="@drawable/ic_baseline_https_24"
        android:drawablePadding="10dp"
        android:hint="@string/Password"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
       />
    <EditText
        android:id="@+id/register_pass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawableLeft="@drawable/ic_baseline_https_24"
        android:drawablePadding="10dp"
        android:hint="@string/Password"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
       />
    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawableLeft="@drawable/ic_baseline_email"
        android:drawablePadding="10dp"
        android:hint="@string/Email"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
        />
    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawableLeft="@drawable/ic_baseline_phone_android_24"
        android:inputType="number"
        android:drawablePadding="10dp"
        android:hint="phone number"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
       />





    <Button
        android:id="@+id/register_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/background"
        android:shadowColor="@color/background"
        android:padding="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shapelogin"/>


</LinearLayout>