<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/halo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".home">

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:text="Welcome "
        android:textAlignment="center"
        android:textAllCaps="true"

        android:textColor="@color/textbox_background"
        android:textSize="50dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewAppointments"
        android:layout_width="128dp"
        android:layout_height="118dp"
        android:layout_margin="5dp"

        android:layout_marginStart="20dp"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shapeemail"
        android:drawableTop="@mipmap/meet_round"
        android:drawingCacheQuality="auto"
        android:text="@string/Appointments"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textViewfind"
        app:layout_constraintEnd_toStartOf="@+id/textViewMyResults"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHello"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/textViewMyResults"
        android:layout_width="128dp"
        android:layout_height="118dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shapeemail"
        android:drawableTop="@mipmap/result"
        android:text="@string/MyResults"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textViewmyResult1"
        app:layout_constraintEnd_toStartOf="@+id/textViewPackages"
        app:layout_constraintStart_toEndOf="@+id/textViewAppointments"
        app:layout_constraintTop_toBottomOf="@+id/textViewHello"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewPackages"
        android:layout_width="122dp"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shapeemail"
        android:drawableTop="@mipmap/paceg"
        android:text="@string/TestPackages"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textViewAsk_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewMyResults"
        app:layout_constraintTop_toBottomOf="@+id/textViewHello" />

    <TextView
        android:id="@+id/textViewfind"
        android:layout_width="128dp"
        android:layout_height="118dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"

        android:layout_marginBottom="405dp"
        android:background="@drawable/shapeemail"
        android:drawableTop="@mipmap/find"
        android:text="@string/Find_Doctor"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewmyResult1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppointments"
        app:layout_goneMarginEnd="10dp" />

    <TextView
        android:id="@+id/textViewmyResult1"
        android:layout_width="128dp"
        android:layout_height="118dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="405dp"
        android:background="@drawable/shapeemail"
        android:drawableTop="@mipmap/err"
        android:text="@string/Avalible_Tests"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewAsk_me"
        app:layout_constraintStart_toEndOf="@+id/textViewfind"
        app:layout_constraintTop_toBottomOf="@+id/textViewMyResults"
        app:layout_goneMarginEnd="10dp" />

    <TextView
        android:id="@+id/textViewAsk_me"
        android:layout_width="121dp"
        android:layout_height="116dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="405dp"
        android:background="@drawable/shapeemail"
        android:drawableTop="@drawable/ic_baseline_forum_24"
        android:drawablePadding="5dp"
        android:text="@string/Ask_me"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewmyResult1"
        app:layout_constraintTop_toBottomOf="@+id/textViewPackages" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="45dp"
        android:layout_height="29dp"
        android:layout_marginEnd="3dp"
        android:background="@color/background"
        android:drawableTop="@drawable/ic_baseline_llogout"
        app:layout_constraintBottom_toTopOf="@+id/textViewAppointments"
        app:layout_constraintEnd_toStartOf="@+id/textViewHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

</androidx.constraintlayout.widget.ConstraintLayout>